Bug 425846 - Too long delays are noticed when entering big 7z files
Summary: Too long delays are noticed when entering big 7z files
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: krarc (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
: 455909 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-08-26 20:44 UTC by Toni Asensi Esteve
Modified: 2022-09-02 08:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toni Asensi Esteve 2020-08-26 20:44:17 UTC
SUMMARY
When entering and browsing big 7z files: users experience too long delays.

STEPS TO REPRODUCE
1. Creating a big 7z archive, e.g.: `7z a /tmp/test-big.7z /usr/bin`
2. Entering the archive, finding too big delays then (and also when browsing the archive).

ADDITIONAL INFORMATION
Those facts may help: 
- When noticing a large delay, if e.g. `htop` is executed, then it's seen that a `7z -y t` [...] process is using a lot of CPU. When the large delay ends, that 7z process is not seen using e.g. `htop`.
Comment 1 Bug Janitor Service 2020-08-26 21:05:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/krusader/-/merge_requests/28
Comment 2 Toni Asensi Esteve 2020-10-19 22:21:11 UTC
Git commit 070f0bddda5647739c38da6196219b8b19a238e4 by Toni Asensi Esteve.
Committed on 19/10/2020 at 22:20.
Pushed by asensi into branch 'master'.

Solve large delays browsing big 7z archives

FIXED: [ 425846 ] Too long delays are noticed when entering big 7z files

Revision: https://invent.kde.org/utilities/krusader/-/merge_requests/28

M  +6    -3    krArc/krarc.cpp
M  +4    -2    krusader/Archive/kr7zencryptionchecker.cpp
M  +3    -2    krusader/Archive/krarchandler.cpp

https://invent.kde.org/utilities/krusader/commit/070f0bddda5647739c38da6196219b8b19a238e4
Comment 3 Nikita Melnichenko 2022-09-02 08:21:26 UTC
*** Bug 455909 has been marked as a duplicate of this bug. ***