Solve large delays browsing big 7z archives

FIXED: [ 425846 ] Too long delays are noticed when entering big 7z files
BUG: 425846

Revision: https://invent.kde.org/utilities/krusader/-/merge_requests/28